# blue-lady-tools

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
public/: global.css  globals.css
public/styles/: global.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  test.txt
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/file/: episodes.rs  mod.rs  read_file.rs  reset_file.rs  reset_timer.rs  timer.rs
src-tauri/src/watchalong/: commands.rs  episodes.rs  mod.rs  read_file.rs  reset_file.rs  reset_timer.rs  timer.rs
src-tauri/src/ytdl/: commands.rs  deps.rs  download.rs  downloads.rs  get_deps.rs  mod.rs
src/Components/Ytdlp/: DepsInstallModal.tsx  SettingsModal.tsx
src/Components/Ytdlp/Helpers/: GetVideoType.ts  InstallDeps.ts  MainContent.tsx
src/components/component/: ThemeProvider.tsx  component.tsx  layout.tsx
src/components/main/: Footer.tsx  Header.tsx  Settings.tsx  WatchAlong.tsx  Ytdlp.tsx
src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx
src/helpers/: GetVideoType.ts
src/lib/tauri/: TauriApi.ts  index.ts
src/lib/tauri/Timer/: index.ts
src/lib/tauri/Ytdlp/: index.ts
src/pages/: _app.tsx  index.tsx  splashscreen.tsx  watchalong.tsx  ytdl.tsx
