[package]
name = "blue-lady-tools"
version = "0.2.7"
description = "Tools for a blue lady"
authors = ["Nixyan"]
license = "MIT"
repository = "https://github.com/tockawaffle/blue-lady-tools"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta.12"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
once_cell = "1.19.0"
regex = "1.10.4"
dirs = "5.0.1"
winapi = { version = "0.3.9", features = ["winbase"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
zip-extract = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
